animated menu bar component

--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -2,7 +2,7 @@
     <mat-grid-list cols="3" rowHeight="5:1" class="header">
         <mat-grid-tile>        
             <button class="nav-link-to-dev" routerLink="/dev" routerLinkActive="active">
-                <div class="session">session id:</div>
+                <div class="session">Session ID:</div>
                 <div class="session-id-container">{{ sessionId }}</div>
             </button>
         </mat-grid-tile>
