--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,9 @@
 <div class="menu-wrapper menu-base" #menuBase>
-    <div class="menu">
+    <div class="menu"
+    #menu
+    [@menuExpand]='expandState'
+    (@menuExpand.done)="expansionDone($event)"
+    >
         <div class="elements" #elements>
             <ng-container *ngFor="let menu of menuData">
                 <ng-container *ngIf="menu.url; else withoutUrl">
@@ -10,8 +14,13 @@
                 </ng-template>
             </ng-container>
         </div>
-        <button class="menu-button" (click)="expand()">
-            click here 2:41
+        <button class="menu-btn" 
+        (click)="expand()" 
+        [ngClass]="{
+            'btn-expand': expandState === 'expanded', 
+            'btn-transform': menuExpansionDone 
+        }">
+            <span class="btn-icon"></span>
         </button>
     </div>
 </div>
