--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -1,7 +1,6 @@
 .home-container {
-    background: rgb(209,209,209);
-background: linear-gradient(90deg, rgba(209,209,209,1) 0%, 
-rgba(222,222,222,1) 35%, rgba(250,250,250,1) 100%);
+    background: rgb(42,42,42);
+    background: radial-gradient(circle, rgba(42,42,42,1) 0%, rgba(42,42,42,0.9794292717086834) 35%, rgba(42,42,42,1) 100%);
     border: 1px solid red;
     height: 100vh;
     width: 100vw;
@@ -15,20 +14,22 @@ rgba(222,222,222,1) 35%, rgba(250,250,250,1) 100%);
     width: 16vw;
     border-radius: 5px;
     margin: 5px;
-    border-radius: 5px;
-    background: #dedede;
-    box-shadow: inset 5px 5px 4px #595959, 
-                inset -5px -5px 4px rgb(233, 233, 233);
+    border-radius: 8px;
+    background: linear-gradient(145deg, #2d2d2d, #262626);
+    box-shadow:  5px 5px 0px #202020, 
+                 -5px -5px 0px #343434;
     text-align: center;
     border: none;
 }
 
 .session {
+    color: gray;
     margin-top: 8px;
     width: 48%;
 }
 
 .session-id-container {
+    color: gray;
     margin-top: 8px;
     width: 48%;
 }
@@ -38,11 +39,8 @@ rgba(222,222,222,1) 35%, rgba(250,250,250,1) 100%);
     width: 50vw;
 }
 
-mat-grid-list {
-    border-bottom: 1px solid rgb(83, 83, 83);
-    box-shadow: 2px 2px #888888;
-    border-bottom: 1px solid black;
-}
+// mat-grid-list {
+// }
 
 .hacker-image {
     height: 60px;
