--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -16,6 +16,10 @@
    
     <p>home-screen works!</p>
 
-    <app-menu [menuData]="menuData"></app-menu>
+    <app-menu 
+    [menuData]="menuData" 
+    [menuStyle]="'solid'"
+    [menuColor]="colors"
+    ></app-menu>
 </div>
 
